--- a/Gara_chaymatp2/tp2_GaraChayma.ipynb
+++ b/Gara_chaymatp2/tp2_GaraChayma.ipynb
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img.GIF\">"
+    "<img src=\"img.gif\">"
    ]
   },
   {
